Add meta content to all pages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -275,6 +275,40 @@
   "menu.main.register": "Create account",
   "menu.main.staffing_time_report": "Time report",
   "menu.main.support.chat": "Chat with Just Arrived",
+  "meta.404.title": "Not found",
+  "meta.404.description": "The page or resource you are looking for can not be found",
+  "meta.contact.title": "Contact us",
+  "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
+  "meta.cookies.about.title": "Cookies",
+  "meta.cookies.about.description": "We use cookies for technical reasons to simplify the use of our services and to give you the user more relevant information when your visit our website. Cookies are also used to measure traffic to our website, for the collection of data and to improve our services. By using our services, you accept that we use cookies, as long as you have not disabled them in your cookies settings in your web browser.",
+  "meta.error.title": "Error",
+  "meta.error.description": "Oops, something went a bit wrong... But don't worry, we are on it!",
+  "meta.faq.title": "FAQ",
+  "meta.faq.description": "We have collected a number of commonly asked questions and information regarding our service that we want to share with you.",
+  "meta.forbidden.title": "Forbidden",
+  "meta.forbidden.description": "Sorry, you’re not allowed to perform that action.",
+  "meta.forgot.password.title": "Forgot password",
+  "meta.forgot.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
+  "meta.god.mode.title": "God mode",
+  "meta.god.mode.description": "As an admin you have access to the whole system and can act on users behalf.",
+  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
+  "meta.home.description": "We connect newly-arrived immigrants with Swedish companies. Our digital platform enables companies to post simple tasks and services and match them with newcomers looking for work.",
+  "meta.job.title": "Apply now",
+  "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.jobs.title": "Get the experience you need to enter the Swedish labor market",
+  "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
+  "meta.login.title": "Login",
+  "meta.login.description": "Login now and apply to our jobs!",
+  "meta.lost.connection.title": "Lost connection",
+  "meta.lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline.",
+  "meta.register.title": "Register",
+  "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.reset.password.title": "Change your password",
+  "meta.reset.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
+  "meta.support.chat.title": "Chat with us",
+  "meta.support.chat.description": "If you have any questions or feedback feel free to chat with us and we will be in touch as soon as we can.",
+  "meta.user.profile.title": "Your profile",
+  "meta.user.profile.description": "This is the most important thing to increase your chances of getting any job through Just Arrived! Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
