--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,5 +1,4 @@
 {
-  "god.mode.pager.section.no.users": "المستخدم غير موجود",
   "already.registered.modal.button": "تسجيل الدخول",
   "already.registered.modal.info": "يبدو أن هناك حسابا يستخدم {{emailOrPhone}}، لذا نقترح عليك تسجيل الدخول بدلا من ذلك. إذا نسيت كلمة المرور، فيمكنك إعادة تعيين كلمة المرور بالنقر على \"هل نسيت كلمة المرور؟\" في الاعلى",
   "already.registered.modal.title": "{{emailOrPhone}} مسجل سابقاً",
@@ -79,6 +78,7 @@
   "god.mode.bar.title": "أنت تعمل بإسم  {{firstName}} {{lastName}} بالمعرف {{id}}!",
   "god.mode.change.user.button": "تغيير المستخدم",
   "god.mode.deactivate.button": "تعطيل",
+  "god.mode.pager.section.no.users": "المستخدم غير موجود",
   "god.mode.title": "{{numberOfUsers}} مستخدمين",
   "home.header.logged.in.jobs.button": "إيجاد وظيفة",
   "home.header.logged.in.profile.button": "تحرير ملف التعريف",
@@ -92,8 +92,8 @@
   "home.instructions.first.section.instruction1": "فتش على عمل بالقرب منك",
   "home.instructions.first.section.instruction2": "تلقى عرض ",
   "home.instructions.first.section.instruction3": "قبول عرض",
-  "home.instructions.first.section.title": "إليك طريقة عمل ذلك:",
-  "home.instructions.second.section.description": "حتى تتمكن من زيادة فرصك في الحصول على عمل:",
+  "home.instructions.first.section.title": "This is how it works",
+  "home.instructions.second.section.description": "In order to increase your chances getting a job",
   "home.instructions.second.section.instruction1": "تقدم إلى جميع الوظائف التي تعجبك",
   "home.instructions.second.section.instruction2": "املأ ملفك الشخصي",
   "home.instructions.second.section.instruction3": "قم بتسجيل الدخول من الحين للآخر والتأكد من ملف التعريف الخاص بك بأنه محدث",
@@ -252,12 +252,12 @@
   "login.title": "تسجيل الدخول",
   "lost.connection.description": "عذرا، يبدو أنك فقدت الاتصال بالخادم. ربما اتصال الإنترنت الخاص بك مقطوع أو الخادم غير متصل.",
   "lost.connection.title": "فقد الإتصال",
-  "map.geolocation.error.close": "انقر للإخفاء.",
-  "map.geolocation.error.permissionDenied": "لقد تعطل دخولك إالى هذا المكان في هذا الموقع ",
-  "map.geolocation.error.positionUnavailable": "نحن غير قادرين على تحديد مكانك",
+  "map.geolocation.error.close": "Click to hide",
+  "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site",
+  "map.geolocation.error.positionUnavailable": "we are unable to determine your location",
   "map.geolocation.error.prefix": "لم يتم تأسيس مكانك بسبب خطأ في الخريطة",
-  "map.geolocation.error.timeout": "لقد انتهى وقت الخدمة ",
-  "map.geolocation.error.unsupportedBrowser": "متصفحك لايدعم خدمات الموقع ",
+  "map.geolocation.error.timeout": "service timeout has been reached",
+  "map.geolocation.error.unsupportedBrowser": "your browser does not support location services",
   "map.marker.info.button": "اذهب للوظيفة",
   "menu.language.text_1": "يمكنك العودة الى الوراء وتغيير اللغة في وقت لاحق إذا أردت",
   "menu.language.text_2": "وظائف، تعليقات ورسائل تُترجم تلقائيا",
@@ -275,6 +275,40 @@
   "menu.main.register": "إنشاء حساب",
   "menu.main.staffing_time_report": "تقرير الوقت",
   "menu.main.support.chat": "تحدث مع Just Arrived",
+  "meta.404.title": "Not found",
+  "meta.404.description": "The page or resource you are looking for can not be found",
+  "meta.contact.title": "Contact us",
+  "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
+  "meta.cookies.about.title": "كعكات",
+  "meta.cookies.about.description": "نستخدم كعكات لأسباب تقنية ولتسهيل استعمال خدماتنا ولإعطاءك كمستخدم معلومات جديرة عند زيارتك لموقعنا تستخدم الكعكات أيضا لقياس عدد زيارات موقعنا ولجمع الإحصائيات وتحسين خدماتنا الاستعانة بخدماتنا يعني الموافقة منك ان نستعمل الكعكات، هذا إذا لم يتم تعطيلها عن طريق تغيير الإعدادات للكعكات في متصفح الشبكة لديك",
+  "meta.error.title": "Error",
+  "meta.error.description": "معذرة، حدث خطأ... لكن لا تقلق، نحن نقوم بإصلاحه!",
+  "meta.faq.title": "FAQ",
+  "meta.faq.description": "We have collected a number of commonly asked questions and information regarding our service that we want to share with you.",
+  "meta.forbidden.title": "ممنوع",
+  "meta.forbidden.description": "عذرا، لا يسمح لك بتنفيذ هذا الإجراء.",
+  "meta.forgot.password.title": "نسيت كلمة المرور",
+  "meta.forgot.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
+  "meta.god.mode.title": "وضع السوبر",
+  "meta.god.mode.description": "As an admin you have access to the whole system and can act on users behalf.",
+  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
+  "meta.home.description": "We connect newly-arrived immigrants with Swedish companies. Our digital platform enables companies to post simple tasks and services and match them with newcomers looking for work.",
+  "meta.job.title": "Apply now",
+  "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.jobs.title": "أحصل على الخبرة التي تريد لكي تدخل سوق العمل السويدية ",
+  "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
+  "meta.login.title": "Login",
+  "meta.login.description": "Login now and apply to our jobs!",
+  "meta.lost.connection.title": "فقد الإتصال",
+  "meta.lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline.",
+  "meta.register.title": "تسجيل جديد",
+  "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.reset.password.title": "Change your password",
+  "meta.reset.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
+  "meta.support.chat.title": "Chat with us",
+  "meta.support.chat.description": "If you have any questions or feedback feel free to chat with us and we will be in touch as soon as we can.",
+  "meta.user.profile.title": "Your profile",
+  "meta.user.profile.description": "This is the most important thing to increase your chances of getting any job through Just Arrived! Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
   "page.not.found.error.description": "عذرا، الصفحة أو المورد الذي تبحث عنه غير موجود.",
   "page.not.found.error.title": "404 - صفحة غير موجودة",
   "register.form.login.button": "قم بتسجيل الدخول الآن",
