--- a/src/assets/i18n/ku.json
+++ b/src/assets/i18n/ku.json
@@ -1,5 +1,4 @@
 {
-  "god.mode.pager.section.no.users": "No users found",
   "already.registered.modal.button": "Têkeve",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -79,6 +78,7 @@
   "god.mode.bar.title": "You are acting as {{firstName}} {{lastName}} with id {{id}}!",
   "god.mode.change.user.button": "Change user",
   "god.mode.deactivate.button": "Deactivate",
+  "god.mode.pager.section.no.users": "No users found",
   "god.mode.title": "{{numberOfUsers}} Users",
   "home.header.logged.in.jobs.button": "Karekî bibîne",
   "home.header.logged.in.profile.button": "Edit profile",
@@ -92,8 +92,8 @@
   "home.instructions.first.section.instruction1": "Apply for jobs near you",
   "home.instructions.first.section.instruction2": "Receive offer",
   "home.instructions.first.section.instruction3": "Accept offer",
-  "home.instructions.first.section.title": "This is how it works:",
-  "home.instructions.second.section.description": "In order to increase your chances getting a job:",
+  "home.instructions.first.section.title": "This is how it works",
+  "home.instructions.second.section.description": "In order to increase your chances getting a job",
   "home.instructions.second.section.instruction1": "Apply to all jobs that you like",
   "home.instructions.second.section.instruction2": "Fill out your profile",
   "home.instructions.second.section.instruction3": "Log in often and make sure your profile is up to date",
@@ -252,12 +252,12 @@
   "login.title": "Têkeve",
   "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
   "lost.connection.title": "Lost connection",
-  "map.geolocation.error.close": "Click to hide.",
-  "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site.",
-  "map.geolocation.error.positionUnavailable": "we are unable to determine your location.",
+  "map.geolocation.error.close": "Click to hide",
+  "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site",
+  "map.geolocation.error.positionUnavailable": "we are unable to determine your location",
   "map.geolocation.error.prefix": "Your location could not be established because {{mapError}}",
-  "map.geolocation.error.timeout": "service timeout has been reached.",
-  "map.geolocation.error.unsupportedBrowser": "your browser does not support location services.",
+  "map.geolocation.error.timeout": "service timeout has been reached",
+  "map.geolocation.error.unsupportedBrowser": "your browser does not support location services",
   "map.marker.info.button": "Go to job",
   "menu.language.text_1": "Tu dikarî vegerî û paşê zimanî biguherînî heger bixwazî.",
   "menu.language.text_2": "Kar, têbînî û peyam otomatîk tên wergerandin.",
@@ -275,6 +275,40 @@
   "menu.main.register": "Hesabekê biafirîne",
   "menu.main.staffing_time_report": "Time report",
   "menu.main.support.chat": "Chat with Just Arrived",
+  "meta.404.title": "Not found",
+  "meta.404.description": "The page or resource you are looking for can not be found",
+  "meta.contact.title": "Contact us",
+  "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
+  "meta.cookies.about.title": "Cookies",
+  "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
+  "meta.error.title": "Error",
+  "meta.error.description": "Oops, something went a bit wrong... But don't worry, we are on it!",
+  "meta.faq.title": "FAQ",
+  "meta.faq.description": "We have collected a number of commonly asked questions and information regarding our service that we want to share with you.",
+  "meta.forbidden.title": "Forbidden",
+  "meta.forbidden.description": "Sorry, you’re not allowed to perform that action.",
+  "meta.forgot.password.title": "Forgot password",
+  "meta.forgot.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
+  "meta.god.mode.title": "God mode",
+  "meta.god.mode.description": "As an admin you have access to the whole system and can act on users behalf.",
+  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
+  "meta.home.description": "We connect newly-arrived immigrants with Swedish companies. Our digital platform enables companies to post simple tasks and services and match them with newcomers looking for work.",
+  "meta.job.title": "Apply now",
+  "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.jobs.title": "Get the experience you need to enter the Swedish labor market",
+  "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
+  "meta.login.title": "Login",
+  "meta.login.description": "Login now and apply to our jobs!",
+  "meta.lost.connection.title": "Lost connection",
+  "meta.lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline.",
+  "meta.register.title": "Register",
+  "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.reset.password.title": "Change your password",
+  "meta.reset.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
+  "meta.support.chat.title": "Chat with us",
+  "meta.support.chat.description": "If you have any questions or feedback feel free to chat with us and we will be in touch as soon as we can.",
+  "meta.user.profile.title": "Your profile",
+  "meta.user.profile.description": "This is the most important thing to increase your chances of getting any job through Just Arrived! Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
