--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -1,5 +1,4 @@
 {
-  "god.mode.pager.section.no.users": "Inga användare hittades",
   "already.registered.modal.button": "Logga in",
   "already.registered.modal.info": "Det verkar som att det redan finns ett konto som använder {{emailOrPhone}}, så vi föreslår att du loggar in istället. Om du glömt ditt lösenord så kan du återställa det genom att klicka på \"Glömt ditt lösenord?\" ovan",
   "already.registered.modal.title": "{{emailOrPhone}} är redan registrerat",
@@ -79,6 +78,7 @@
   "god.mode.bar.title": "Du agerar som {{firstName}} {{lastName}} med id {{id}}!",
   "god.mode.change.user.button": "Ändra användare",
   "god.mode.deactivate.button": "Deaktivera",
+  "god.mode.pager.section.no.users": "Inga användare hittades",
   "god.mode.title": "{{numberOfUsers}} Användare",
   "home.header.logged.in.jobs.button": "Hitta uppdrag",
   "home.header.logged.in.profile.button": "Redigera profil",
@@ -92,8 +92,8 @@
   "home.instructions.first.section.instruction1": "Sök jobb i din närhet",
   "home.instructions.first.section.instruction2": "Få ett erbjudande",
   "home.instructions.first.section.instruction3": "Acceptera erbjudandet",
-  "home.instructions.first.section.title": "Så här fungerar det:",
-  "home.instructions.second.section.description": "Öka dina chanser att få ett jobb:",
+  "home.instructions.first.section.title": "Så här fungerar det",
+  "home.instructions.second.section.description": "För att öka dina chanser att få ett jobb",
   "home.instructions.second.section.instruction1": "Sök till alla jobb du kan tänka dig utföra",
   "home.instructions.second.section.instruction2": "Fyll i din profil",
   "home.instructions.second.section.instruction3": "Logga in ofta och se till att din profil är uppdaterad",
@@ -252,12 +252,12 @@
   "login.title": "Logga in",
   "lost.connection.description": "\nTyvärr, men det verkar som att du förlorat anslutningen till servern. Det kan vara så att din internetuppkoppling är nere eller att servern är offline",
   "lost.connection.title": "Anslutning förlorad",
-  "map.geolocation.error.close": "Dölj.",
-  "map.geolocation.error.permissionDenied": "du har stängt av möjligheten att bli positionerad på den här sidan.",
-  "map.geolocation.error.positionUnavailable": "vi kan inte bestämma din position.",
+  "map.geolocation.error.close": "Klicka för att gömma",
+  "map.geolocation.error.permissionDenied": "du har avaktiverat platsinformation för denna sida",
+  "map.geolocation.error.positionUnavailable": "vi kunde inte avgöra din position",
   "map.geolocation.error.prefix": "Din plats kunde inte hittas eftersom {{mapError}}",
-  "map.geolocation.error.timeout": "tjänsten kunde inte nås.",
-  "map.geolocation.error.unsupportedBrowser": "din webbläsare stödjer inte positionering.",
+  "map.geolocation.error.timeout": "det tog för lång tid att avgöra din position",
+  "map.geolocation.error.unsupportedBrowser": "din webbläsare stödjer in positionering",
   "map.marker.info.button": "Gå till jobb",
   "menu.language.text_1": "Du kan gå tillbaka och ändra språk senare om du vill.",
   "menu.language.text_2": "Uppdrag, kommentarer och meddelanden översätts automatiskt.",
@@ -275,6 +275,40 @@
   "menu.main.register": "Skapa konto",
   "menu.main.staffing_time_report": "Tidsrapportera",
   "menu.main.support.chat": "Chatta med Just Arrived",
+  "meta.404.title": "Hittades inte",
+  "meta.404.description": "Sidan eller resursen du söker kunde inte hittas",
+  "meta.contact.title": "Kontakta oss",
+  "meta.contact.description": "Om du har några frågor eller feedback så får du gärna kontakta oss och så kommer vi höra av oss till dig så snart som möjligt.",
+  "meta.cookies.about.title": "Cookies",
+  "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
+  "meta.error.title": "Fel",
+  "meta.error.description": "Hoppsan! Något gick fel.. Men oroa dig inte, vi jobbar på det!",
+  "meta.faq.title": "FAQ",
+  "meta.faq.description": "Vi har samlat ett antal vanligt ställda frågor och information angående vår tjänst som vi vill dela med dig.",
+  "meta.forbidden.title": "Otillåtet",
+  "meta.forbidden.description": "\nTyvärr, du har inte tillåtelse att utföra åtgärden.",
+  "meta.forgot.password.title": "Glömt lösenordet",
+  "meta.forgot.password.description": "Om du har förlorat eller glömt ditt lösenord så är det enkelt att ändra det och få tillbaka kontrollen över ditt konto.",
+  "meta.god.mode.title": "Gudläge",
+  "meta.god.mode.description": "Som admin så har du tillgång till hela systemet och kan agera på användarnas vägnar.",
+  "meta.home.title": "Vi ger nyanlända i Sverige en chans att komma in på arbetsmarknaden",
+  "meta.home.description": "Vi sammanför nyanlända invandrare med svenska företag. Vår digitala plattform gör det möjligt för företag att lägga upp jobb och matcha dem med nyanlända som söker arbete.",
+  "meta.job.title": "Sök nu",
+  "meta.job.description": "Genom att matcha dig med svenska företag så hjälper Just Arrived dig att få de referenser du behöver för att komma in på den svenska arbetsmarknaden.",
+  "meta.jobs.title": "Få erfarenheten du behöver för att komma in på den svenska arbetsmarknaden",
+  "meta.jobs.description": "Nu är det dags att börja söka! Sök till vilket och hur många jobb du vill! Glöm inte att logga in ofta för att ta del av nyligen upplagda jobb!",
+  "meta.login.title": "Logga in",
+  "meta.login.description": "Logga in nu och sök våra jobb!",
+  "meta.lost.connection.title": "Anslutning förlorad",
+  "meta.lost.connection.description": "Tyvärr, men det verkar som du har förlorat anslutningen till servern. Det kan vara så att din internetuppkoppling är nere eller att servern är offline.",
+  "meta.register.title": "Registrera",
+  "meta.register.description": "Genom att matcha dig med svenska företag så hjälper Just Arrived dig att få de referenser du behöver för att komma in på den svenska arbetsmarknaden.",
+  "meta.reset.password.title": "Byt ditt lösenord",
+  "meta.reset.password.description": "Om du har förlorat eller glömt ditt lösenord så är det enkelt att ändra det och få tillbaka kontrollen över ditt konto.",
+  "meta.support.chat.title": "Chatta med oss",
+  "meta.support.chat.description": "Om du har några frågor eller feedback så får du gärna chatta med oss så kommer vi höra av oss till dig så snart som möjligt.",
+  "meta.user.profile.title": "Din profil",
+  "meta.user.profile.description": "Din profil är det allra viktigaste för att öka dina chanser att få jobb genom Just Arrived! Var noga med att fylla i alla relevanta uppgifter och alla dina färdigheter. Om din profil är tom blir du inte matchad med några jobb.",
   "page.not.found.error.description": "Vi ber om ursäkt, sidan eller resursen du letar efter finns inte.",
   "page.not.found.error.title": "404 - Sidan kan inte hittas",
   "register.form.login.button": "Logga in nu",
