Footer design complete

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,16 @@
 {
+  "footer.get.started.section.title": "Get started",
+  "footer.get.started.section.login": "Log in",
+  "footer.get.started.section.register": "Create account",
+  "footer.get.started.section.jobs": "Find jobs",
+  "footer.get.started.section.profile": "Your profile",
+  "footer.about.us.section.title": "About us",
+  "footer.about.us.section.just.arrived": "About Just Arrived",
+  "footer.about.us.section.careers": "Careers",
+  "footer.about.us.section.press": "Press",
+  "footer.about.us.section.faq": "FAQ",
+  "footer.contact.us.section.title": "Contact",
+  "footer.follow.us.section.title": "Follow us",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
