How it works section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,15 @@
 {
+  "how.it.works.section.register.description.title": "1. Create account",
+  "how.it.works.section.register.description.paragraph.1": "Create your account at Just Arrived.",
+  "how.it.works.section.register.description.paragraph.2": "The registration form takes one minute to complete and is open for all newcomers and asylum seekers. You will also receive news and updates from Just Arrived after registration.",
+  "how.it.works.section.update.profile.description.title": "2. Update profile",
+  "how.it.works.section.update.profile.description.paragraph.1": "This is the most important thing to increase your chances of getting any job through Just Arrived!",
+  "how.it.works.section.update.profile.description.paragraph.2": "Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
+  "how.it.works.section.find.jobs.description.title": "3. Find jobs",
+  "how.it.works.section.find.jobs.description.paragraph.1": "Now it is time to begin job searching!",
+  "how.it.works.section.find.jobs.description.paragraph.2": "Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
+  "how.it.works.section.create.accont.button": "Create account",
+  "how.it.works.section.jobs.button": "Check out our jobs",
   "footer.get.started.section.title": "Get started",
   "footer.get.started.section.login": "Log in",
   "footer.get.started.section.register": "Create account",
